--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,24 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+          <groupId>org.javalite</groupId>
+          <artifactId>activejdbc-instrumentation</artifactId>
+          <version>2.2</version>
+          <executions>
+              <execution>
+                  <phase>process-classes</phase>
+                  <goals>
+                      <goal>instrument</goal>
+                  </goals>
+              </execution>
+          </executions>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -43,5 +61,17 @@
     </dependency>
 
 
+    <dependency>
+      <groupId>org.javalite</groupId>
+      <artifactId>activejdbc</artifactId>
+      <version>2.2</version>
+    </dependency>
+
+    <!-- MySQL -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.6</version>
+    </dependency>
   </dependencies>
 </project>
