--- a/src/main/resources/database.properties.example
+++ b/src/main/resources/database.properties.example
@@ -1,7 +1,7 @@
 development.driver=com.mysql.jdbc.Driver
 development.username=<USERNAME>
 development.password=<PASSWORD>
-development.url=jdbc:mysql://localhost/trivia_dev
+development.url=jdbc:mysql://localhost:3306/trivia_dev
 
 test.driver=com.mysql.jdbc.Driver
 test.username=<USERNAME>
